[package]
name = "tsr"
version = "0.1.8"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = true

[features]
default = ["index_sort", "log"]
index_sort = []
lru_cache = ["dep:lru"]
allow_ip = []
block_ip = []
log = ["dep:log", "dep:env_logger"]

[dependencies]
async-mutex = "1.4.0"
chrono = { version = "0.4.38", features = ["clock", "now"] }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = { version = "0.11.3", features = ["color"] , optional = true }
lazy_static = "1.5.0"
log = { version = "0.4.21" , optional = true }
lru = { version = "0.12.3", optional = true }
mime = { version = "0.3.17" }
mime_guess = { version = "2.0.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "fs",
    "io-std",
    "io-util",
    "net",
    "macros",
] }
urlencoding = "2.1.3"

[build-dependencies]
serde_yml = "0.0.10"
toml = "0.8.14"
