[package]
name = "zest"
version = "0.2.1"
edition = "2021"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = true

[features]
default = ["index_sort", "log", "ip_limit", "lru_cache"]
index_sort = []
lru_cache = ["dep:lru"]
ip_limit = ["dep:ipnet"]
log = ["dep:log"]

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
async-mutex = "1.4.0"
async-rwlock = "1.3.0"
chrono = { version = "0.4.38", features = ["clock", "now"] }
clap = { version = "4.5.7", features = ["derive"] }
ipnet = { version = "2.9.0", optional = true }
lazy_static = "1.5.0"
log = { version = "0.4.21", optional = true }
log4rs = "1.3.0"
lru = { version = "0.12.3", optional = true }
mime = { version = "0.3.17" }
mime_guess = { version = "2.0.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
signal-hook = "0.3.17"
tokio = { version = "1.38.0", features = [
	"rt-multi-thread",
	"fs",
	"io-std",
	"io-util",
	"net",
	"macros",
	"sync",
	"time",
] }
urlencoding = "2.1.3"
